k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: donee
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
